# blocks

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.py  build.yml  compile.sh  makefile  test.txt
apps/: blocks.cpp  byline.cpp  proto  proto.cpp  seur.cpp
blc/: command_builder.c  command_builder.h  main.c  tot.bat
blexe/: main.c
blh/: main.c
blocks/: clean.c  clean.h  compile.c  compile.h  execute.c  execute.h  main.c  main.cpp
blp/: main.c
doc/: README.md
example/: main.yml  main2.yml
examples/: add.blocks  add.blocks.blb  main.blocks  types.blocks
experimental/: algorithm.c  algorithm.h  argument.c  argument.h  array.c  array.h  blocks-std.c  blocks-std.h  config.h  cstring.c  cstring.h  keyword.h  log.c  log.h  main.c  memory.c  memory.h  stdchar.c  string.c  string.h  test.c  test.h  typearray.h  typeref.h  utest.c  utest.h  version.h  vstring.c  vstring.h
include/: arguments.hpp  block.hpp  bml.hpp  commands.hpp  cxx.hpp  result.hpp  statements.hpp
libs/: algorithm.hpp  array.hpp  base64.cpp  base64.h  base64.hpp  containers.hpp  intrange.hpp  iterator.hpp  list.hpp  log.hpp  map.hpp  pointer.hpp  string.hpp  types.hpp  vector.hpp
src/: .lexer.hpp.swn  .lexer.hpp.swo  .main.cpp.swn  blocks.cpp  blocks_algorithm.c  blocks_algorithm.h  command.c  command.h  command_building.cpp  command_line.cpp  commander.hpp  file.c  file.h  lexer.cpp  lexer.hpp  macro.h  main.c  main.cpp  main2.cpp  model.hpp  parser.cpp  parser.hpp  semanticker.cpp  semanticker.hpp  srange.c  srange.h
src2/: command.cpp  command.hpp  command_builder.cpp  (+16 more)
(+80 files in other folders)
